# ProjectAuroraZeta

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  GAME_SPEC.md  Gameplay_Loop.md  Original_Idea.md  ProjectAuroraZeta.uproject  README.md  Revamped - Copy.md  Revamped.md  SUGGESTIONS.md  TASK.md  TRACELOG.md  oldtask  win
.github/workflows/: cross-platform-build.yml  macos-build.yml
Assets/Scenes/: Main.unity  Menu.unity
Assets/Scripts/: Bullet.cs  CameraController.cs  EnemyHealth.cs  GameManager.cs  Gun.cs  MenuManager.cs  PlayerController.cs  PlayerHealth.cs  SimpleEnemy.cs  WaveManager.cs
Config/: DefaultGame.ini
Source/: ProjectAuroraZeta.Target.cs  ProjectAuroraZetaEditor.Target.cs
Source/ProjectAuroraZeta/: ProjectAuroraZeta.Build.cs  ProjectAuroraZeta.cpp
Source/ProjectAuroraZeta/Private/: ProjectAuroraZetaCharacter.cpp  ProjectAuroraZetaGameMode.cpp
Source/ProjectAuroraZeta/Public/: ProjectAuroraZetaCharacter.h  ProjectAuroraZetaGameMode.h
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
build-win/engine/: Makefile  cmake_install.cmake
build-win/game/: Makefile  cmake_install.cmake
cmake/modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
cmake/toolchains/: mingw-w64.cmake
data/: abilities.json  abilities_default.json  assets.json  enemies.json  gameplay.json  input_bindings.json  menu_presets.json  scenery.json  statuses.json  units.json
data/rpg/: archetypes.json  consumables.json  loot.json  talents.json
docs/: AndroidBuild.md  AssetLegends.md  AssetList.md  GAME_SPEC.md  Gameplay_Loop.md  Ideas.md  Original_Idea.md  Shields, Armor & Health System.md  Shopping List.md  StatLegend.md  TalentLegend.md  Talents.md  UnitDefinitions.md  UnitPlan.md  VS Code Debug.json
engine/: CMakeLists.txt
engine/assets/: AssetManifest.cpp  AssetManifest.h  FontLoader.cpp  FontLoader.h  Texture.h  TextureLoader.cpp  TextureLoader.h  TextureManager.cpp  TextureManager.h
engine/audio/: AudioBackend.cpp  AudioBackend.h  MusicPlayer.cpp  MusicPlayer.h  SfxPlayer.cpp  SfxPlayer.h
engine/core/: Application.cpp  Application.h  ApplicationListener.h  Logger.cpp  Logger.h  Time.h
engine/ecs/: ComponentStorage.h  Entity.h  Registry.h
engine/ecs/components/: AABB.h  CombatStats.h  Health.h  Projectile.h  RPGCombatState.h  RPGStats.h  Renderable.h  SpriteAnimation.h  Status.h  Tags.h  Transform.h  Velocity.h
engine/gameplay/: Combat.h  FogOfWar.cpp  FogOfWar.h  InputHelpers.h  RPGCombat.cpp  RPGCombat.h  RPGStats.cpp  RPGStats.h
engine/input/: ActionMapper.cpp  ActionMapper.h  ActionState.h  InputBinding.h  InputLoader.cpp  InputLoader.h  InputState.h
engine/math/: Vec2.h
engine/net/: NetAddress.h  NetPacket.h  NetSerializer.h  NetTransport.cpp  NetTransport.h  UdpSocket.cpp  UdpSocket.h
engine/platform/: NullWindow.cpp  NullWindow.h  SDLRenderDevice.cpp  SDLRenderDevice.h  SDLTexture.cpp  SDLTexture.h  SDLWindow.cpp  SDLWindow.h  Window.h
engine/render/: BitmapFont.h  BitmapTextRenderer.cpp  BitmapTextRenderer.h  Camera2D.h  CameraUtil.h  Color.h  FogOfWarRenderer.cpp  FogOfWarRenderer.h  NullRenderDevice.h  RenderDevice.h  TextRenderer.h
engine/status/: StatusContainer.cpp  StatusContainer.h  StatusTypes.h
engine/ui/: MiniMapHUD.cpp  MiniMapHUD.h
game/: CMakeLists.txt  EnemyDefinition.h  Game.cpp  Game.h  GameAbilities.cpp  GameSelectedBuilding.cpp
game/components/: AreaDamage.h  BossSummoner.h  BountyTag.h  Building.h  DamageNumber.h  DamageOverTime.h  Dying.h  EnemyAttackSwing.h  EnemyAttributes.h  EnemyDeathAnim.h  EnemyOnHit.h  EnemyRevive.h  EnemyReviving.h  EnemyType.h  EscortObjective.h  EscortPreMove.h  EscortTarget.h  EventActive.h  EventMarker.h  Facing.h  FlameSkullBehavior.h  Ghost.h  HeroAttackAnim.h  HeroAttackVisualOverride.h  HeroPickupAnim.h  HeroSpriteSheets.h  HeroTint.h  HitFlash.h  Invulnerable.h  LookDirection.h  MiniUnit.h  MiniUnitCommand.h  MiniUnitStats.h  MultiRowSpriteAnim.h  OffensiveType.h  Pickup.h  PickupBob.h  SecondaryWeapon.h  ShopItem.h  Shopkeeper.h  (+8 more)
game/meta/: GlobalUpgrades.cpp  GlobalUpgrades.h  ItemDefs.cpp  ItemDefs.h  SaveManager.cpp  SaveManager.h
game/net/: LobbyState.h  NetMessages.h  NetSession.cpp  NetSession.h  SessionConfig.h
game/render/: RenderSystem.cpp  RenderSystem.h
game/rpg/: RPGContent.cpp  RPGContent.h  RPGLoaders.cpp
game/status/: ZetaStatusFactory.cpp  ZetaStatusFactory.h
game/systems/: AnimationSystem.cpp  AnimationSystem.h  BuffSystem.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DamageNumberSystem.cpp  DamageNumberSystem.h  EnemyAISystem.cpp  EnemyAISystem.h  EnemySpecialSystem.cpp  EnemySpecialSystem.h  EnemySpriteStateSystem.cpp  EnemySpriteStateSystem.h  EventSystem.cpp  EventSystem.h  HeroSpriteStateSystem.cpp  HeroSpriteStateSystem.h  HitFlashSystem.cpp  HitFlashSystem.h  HotzoneSystem.cpp  HotzoneSystem.h  MiniUnitSystem.cpp  MiniUnitSystem.h  MovementSystem.cpp  MovementSystem.h  PickupSystem.cpp  PickupSystem.h  ProjectileSystem.cpp  ProjectileSystem.h  RpgDamage.cpp  RpgDamage.h  ShopSystem.cpp  ShopSystem.h  WaveSystem.cpp  WaveSystem.h
game/ui/: ToastManager.cpp  ToastManager.h
scripts/: build-mac.sh  build-win.sh  gen_rpg_loot.py  package-win.sh
src/: main.cpp
src/AuroraZetaGame/: AuroraZetaGame.csproj  Bullet.cs  Enemy.cs  Game1.cs  Player.cs  Program.cs  WaveManager.cs  app.manifest
src/AuroraZetaGame/Content/: Content.mgcb  DefaultFont.spritefont
tests/: CombatTests.cpp  RPGSystemsTests.cpp  RpgLootTests.cpp  UpgradesTests.cpp
